feat(java-spring): add literature by author
